[gd_scene load_steps=9 format=3 uid="uid://7efmm62hyihj"]

[ext_resource type="Theme" uid="uid://qpcg0ktiqy0j" path="res://Art/assets/theme.tres" id="1_oa3e0"]
[ext_resource type="Script" path="res://Elements/function/credits.gd" id="2_lws5y"]
[ext_resource type="Texture2D" uid="uid://dk6dn3hd6uy1h" path="res://Art/assets/misc/suffering.png" id="3_oiqrg"]
[ext_resource type="AudioStream" uid="uid://bj4b5bmpxphcf" path="res://Art/audio/ui/ui_hover1.ogg" id="4_y2063"]
[ext_resource type="AudioStream" uid="uid://chq4t5bvnn3qx" path="res://Art/audio/ui/ui_select.ogg" id="5_r1w8w"]

[sub_resource type="Animation" id="Animation_qpall"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_2osxj"]
resource_name = "the_funny"
length = 60.0
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30, 60),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 0.0117647)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1a0pn"]
_data = {
"RESET": SubResource("Animation_qpall"),
"the_funny": SubResource("Animation_2osxj")
}

[node name="DemoCompleteScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_oa3e0")
script = ExtResource("2_lws5y")

[node name="Image" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0823529, 0.0784314, 0.117647, 1)

[node name="MainText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -620.5
offset_right = 579.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]




[font_size=120][color=FIREBRICK ][b]The End[/b]
[color=LEMON_CHIFFON][font_size=40][wave]Thank you[/wave][color=WHITE] for playing.
[font_size=25]

A game by [i][color=LEMON_CHIFFON][url=https://swag0.itch.io/]Swag0[/url]





"

[node name="OptionalText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -425.0
offset_top = 971.0
offset_right = 425.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center][font_size=20][color=WEB_GRAY]If you want to play again, restart the game, and
[b]go to options, and select 'Reset Save Data'[/b]"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -194.0
offset_top = -193.0
offset_right = 194.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 0
text = "LEAVE"

[node name="The Funny" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -250.0
offset_right = 500.0
offset_bottom = 249.0
grow_vertical = 2
texture = ExtResource("3_oiqrg")
expand_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="The Funny"]
libraries = {
"": SubResource("AnimationLibrary_1a0pn")
}
autoplay = "the_funny"

[node name="Audio" type="Node" parent="."]

[node name="UIHover1" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_y2063")

[node name="UISelect" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("5_r1w8w")

[connection signal="meta_clicked" from="MainText" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="meta_clicked" from="OptionalText" to="." method="_on_rich_text_label_meta_clicked"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
